<resources>
    <string name="app_name">appGenda</string>
    <string name="todo">TODO</string>
    <string name="nombre_apellidoDefecto">Nombre Apellido</string>
    <string name="telDefecto">000-000-000</string>
    <string name="buscar">Buscar</string>
    <string name="title_item">+</string>
    <string name="switch_nameitem">Switch</string>
    <string name="compartir">Compartir</string>
    <string name="emailDefecto">admin123@email.com</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tel_fono_principal">Teléfono Principal</string>
    <string name="tel_fono_secundario">Teléfono Secundario</string>
    <string name="e_mail">E-mail</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="bt_guardar">Guardar</string>
    <string name="borrar">borrar</string>
    <string name="editar">editar</string>
    <string name="eliminar">eliminar</string>
</resources>