<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.EditorContacto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.000"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:titleTextColor="?android:attr/textColorPrimaryInverse" />

    <ImageView
        android:id="@+id/ivFotoMuestraEditor"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_defecto" />

    <Button
        android:id="@+id/btnSeleccionarImgEditor"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="4dp"
        android:background="@android:drawable/ic_menu_edit"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombreEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:autofillHints="@string/nombre"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/etNombreEditor"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <EditText
        android:id="@+id/etApellidoEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/apellido"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/etApellidoEditor"
        android:text="@string/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreEditor" />

    <EditText
        android:id="@+id/etTelPrincipalEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/tel_fono_principal"
        android:ems="10"
        android:inputType="phone"
        android:labelFor="@+id/etTelPrincipalEditor"
        android:text="@string/tel_fono_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellidoEditor" />

    <EditText
        android:id="@+id/etTelSecundarioEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/tel_fono_secundario"
        android:ems="10"
        android:inputType="phone"
        android:labelFor="@+id/etTelSecundarioEditor"
        android:text="@string/tel_fono_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelPrincipalEditor" />

    <EditText
        android:id="@+id/etEmailEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/e_mail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/etEmailEditor"
        android:text="@string/e_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelSecundarioEditor"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnCancelarEditor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/bt_cancelar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardarEditor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailEditor" />

    <Button
        android:id="@+id/btnGuardarEditor"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:text="@string/bt_guardar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailEditor" />

</androidx.constraintlayout.widget.ConstraintLayout>